--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,12 @@
 # vim crap #
 *.swp
+
+# OS generated files #
+.DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+Icon?
+ehthumbs.db
+Thumbs.db
