--- a/dotfiles/tmux.conf
+++ b/dotfiles/tmux.conf
@@ -1,3 +1,6 @@
+set-option -g default-shell $SHELL
+set-option -g default-terminal screen-256color
+
 set-option -g prefix C-a
 
 set-option -g base-index 1
