--- a/dotfiles/tmux.conf
+++ b/dotfiles/tmux.conf
@@ -2,6 +2,7 @@ set-option -g default-shell $SHELL
 set-option -g default-terminal screen-256color
 
 set-option -g prefix C-a
+set-option -g escape-time 0
 
 set-option -g base-index 1
 
