--- a/dotfiles/tmux.conf
+++ b/dotfiles/tmux.conf
@@ -14,6 +14,8 @@ set-option -g status-keys vi
 set-window-option -g monitor-activity on
 set-window-option -g aggressive-resize on
 
+set-option -g clock-mode-style 12
+
 # Messageline
 set-option -g message-bg cyan
 set-option -g message-fg black
