--- a/dotfiles/tmux.conf
+++ b/dotfiles/tmux.conf
@@ -2,7 +2,7 @@ set-option -g default-shell $SHELL
 set-option -g default-terminal screen-256color
 
 set-option -g prefix C-a
-set-option -g escape-time 0
+set-option -sg escape-time 250
 
 set-option -g base-index 1
 
@@ -67,3 +67,4 @@ bind-key k select-pane -U
 bind-key j select-pane -D
 bind-key h select-pane -L
 bind-key l select-pane -R
+
