Fixed up tmux configuration and .profile to allow tmux to grab SSH_AUTH_SOCK. Hopefully this works. (Also added comment insertion to .vimrc and forgot to commit earlier. Derp.)

--- a/dotfiles/tmux.conf
+++ b/dotfiles/tmux.conf
@@ -1,6 +1,9 @@
 set-option -g default-shell $SHELL
 set-option -g default-terminal screen-256color
 
+set-environment -g SSH_AUTH_SOCK ~/.ssh/ssh_auth_sock
+set-option -ga update-environment '$SSH_AUTH_SOCK'
+
 set-option -g prefix C-a
 set-option -sg escape-time 250
 
