Disabled vim-style pane navigation in tmux, because it's too confusing while using vim, and I tend to do that a lot lately.

--- a/dotfiles/tmux.conf
+++ b/dotfiles/tmux.conf
@@ -63,8 +63,8 @@ bind-key T clock-mode # Bumped to make room for status clock toggle.
 
 # vim-style directional pane navigation:
 
-bind-key k select-pane -U
-bind-key j select-pane -D
-bind-key h select-pane -L
-bind-key l select-pane -R
+#bind-key k select-pane -U
+#bind-key j select-pane -D
+#bind-key h select-pane -L
+#bind-key l select-pane -R
 
