--- a/dotfiles/tmux/expanded-status.conf
+++ b/dotfiles/tmux/expanded-status.conf
@@ -1,5 +1,5 @@
 set-option -g status-left-length 50
-set-option -g status-right '#[fg=cyan]#(date +"%I:%M:%S %p // %m.%d.%y \(%a\)")'
+set-option -g status-right '#[fg=cyan]#(date +"%I:%M:%S %p // %y.%m.%d \(%a\)")'
 
 bind-key / source-file ~/.tmux/compact-status.conf
 
