[tmux.conf] Removed maximum length for the session name in the status line.

--- a/dotfiles/tmux.conf
+++ b/dotfiles/tmux.conf
@@ -26,7 +26,7 @@ set-option -g status-bg black
 set-option -g status-fg default
 set-option -g status-attr dim
 
-set-option -g status-left '#9S @ #h >>'
+set-option -g status-left '#S @ #h >>'
 set-option -g status-left-fg cyan
 set-option -g status-left-attr dim
 set-option -g status-left-length 50
