[tmux.conf] Update to new format variables.

--- a/dotfiles/tmux.conf
+++ b/dotfiles/tmux.conf
@@ -26,15 +26,15 @@ set-option -g status-bg black
 set-option -g status-fg default
 set-option -g status-attr dim
 
-set-option -g status-left '#S @ #h >>'
+set-option -g status-left '#{session_name} @ #{host_short} >>'
 set-option -g status-left-fg cyan
 set-option -g status-left-attr dim
 set-option -g status-left-length 50
 
 set-option -g status-justify left
 
-set-window-option -g window-status-format '(#I #W)'
-set-window-option -g window-status-current-format '(#I #W)'
+set-window-option -g window-status-format '(#{window_index} #{window_name})'
+set-window-option -g window-status-current-format '(#{window_index} #{window_name})'
 set-window-option -g window-status-current-fg yellow
 
 set-window-option -g window-status-bell-attr underscore
@@ -57,8 +57,8 @@ bind-key m set-window-option monitor-activity
 bind-key \; command-prompt
 bind-key S choose-session # Bump this to make room for ssh:
 bind-key s command-prompt -p ssh: "new-window -n '^ %1' 'ssh %1'"
-bind-key 0 move-window # Moves the window to the lowest available index. (No window zero exists.)
-bind-key X confirm-before -p "kill-window #W? (y/n)" kill-window
+bind-key 0 move-window -r # Renumber windows in order
+bind-key X confirm-before -p "kill-window #{window_name}? (y/n)" kill-window
 bind-key T clock-mode # Bumped to make room for status clock toggle.
 
 # vim-style directional pane navigation:
