--- a/dotfiles/tmux.conf
+++ b/dotfiles/tmux.conf
@@ -65,3 +65,20 @@ bind-key T clock-mode # Bumped to make room for status clock toggle.
 #bind-key h select-pane -L
 #bind-key l select-pane -R
 
+# Smart pane switching with awareness of vim splits:
+# (https://github.com/christoomey/vim-tmux-navigator)
+is_vim='echo "#{pane_current_command}" | grep -iqE "(^|\/)g?(view|n?vim?)(diff)?$"'
+bind-key -n C-h if-shell "$is_vim" "send-keys C-h" "select-pane -L"
+bind-key -n C-j if-shell "$is_vim" "send-keys C-j" "select-pane -D"
+bind-key -n C-k if-shell "$is_vim" "send-keys C-k" "select-pane -U"
+bind-key -n C-l if-shell "$is_vim" "send-keys C-l" "select-pane -R"
+bind-key -n C-\ if-shell "$is_vim" "send-keys C-\\" "select-pane -l"
+
+# Allow clearing the screen with smart pane switching enabled:
+bind-key C-l send-keys "C-l"
+
+# Unbind old nav keys to forcibly remap my muscle memory:
+unbind-key Left
+unbind-key Right
+unbind-key Up
+unbind-key Down
