[tmux] Remove escapes from date, broken in 2.1

--- a/dotfiles/tmux/expanded-status.conf
+++ b/dotfiles/tmux/expanded-status.conf
@@ -1,5 +1,5 @@
 set-option -g status-left-length 50
-set-option -g status-right '#[fg=cyan]#(date +"%H:%M:%S // %Y-%m-%d \(%a\)")'
+set-option -g status-right '#[fg=cyan]#(date +"%H:%M:%S // %Y-%m-%d (%a)")'
 
 bind-key / source-file ~/.tmux/compact-status.conf
 
