[tmux] Make tmux respect XDG the best I can.
Also changed the clock to 24h in compact-status.

--- a/dotfiles/tmux.conf
+++ b/dotfiles/tmux.conf
@@ -43,8 +43,8 @@ set-window-option -g window-status-bell-fg red
 set-window-option -g window-status-activity-attr none
 set-window-option -g window-status-activity-fg green
 
-source-file ~/.tmux/expanded-status.conf
-source-file ~/.tmux/show-clock.conf
+source-file $XDG_CONFIG_HOME/tmux/expanded-status.conf
+source-file $XDG_CONFIG_HOME/tmux/show-clock.conf
 
 bind-key r source-file ~/.tmux.conf
 bind-key a last-window
