--- a/dotfiles/tmux/show-clock.conf
+++ b/dotfiles/tmux/show-clock.conf
@@ -1,2 +1,2 @@
 set-option -g status-right-length 50
-bind-key t source-file ~/.tmux/hide-clock.conf
+bind-key t source-file $XDG_CONFIG_HOME/tmux/hide-clock.conf
