--- a/dotfiles/tmux.conf
+++ b/dotfiles/tmux.conf
@@ -2,7 +2,7 @@ set-option -g default-shell $SHELL
 set-option -g default-terminal screen-256color
 
 set-option -g prefix C-a
-set-option -sg escape-time 20
+set-option -sg escape-time 10
 
 set-option -g base-index 1
 
@@ -10,6 +10,8 @@ set-option -g status-interval 1
 
 set-window-option -g mode-keys vi
 set-option -g status-keys vi
+
+set-option -g mouse
 
 set-window-option -g monitor-activity on
 set-window-option -g aggressive-resize on
