[tmux] Gonna try C-q for a while.

--- a/dotfiles/tmux.conf
+++ b/dotfiles/tmux.conf
@@ -1,7 +1,7 @@
 set-option -g default-shell $SHELL
 set-option -g default-terminal screen-256color
 
-set-option -g prefix C-a
+set-option -g prefix C-q
 set-option -sg escape-time 10
 
 set-option -g base-index 1
