[tmux] Make panes follow current working directory
This rebinds the pane/window creation commands to use pane_current_path. Fixes #7.

--- a/dotfiles/tmux.conf
+++ b/dotfiles/tmux.conf
@@ -48,6 +48,11 @@ set-window-option -g window-status-activity-fg green
 source-file $XDG_CONFIG_HOME/tmux/expanded-status.conf
 source-file $XDG_CONFIG_HOME/tmux/show-clock.conf
 
+# Rebind window management to track working directory.
+bind '"' split-window -c "#{pane_current_path}"
+bind % split-window -h -c "#{pane_current_path}"
+bind c new-window -c "#{pane_current_path}"
+
 bind-key r source-file ~/.tmux.conf
 bind-key a last-window
 bind-key C-a send-prefix
