--- a/dotfiles/tmux/compact-status.conf
+++ b/dotfiles/tmux/compact-status.conf
@@ -1,4 +1,4 @@
 set-option -g status-left-length 0
-set-option -g status-right '#[fg=cyan]#(date +"%H:%M")'
+set-option -g status-right '#[fg=cyan]%H:%M'
 
 bind-key / source-file $XDG_CONFIG_HOME/tmux/expanded-status.conf
