[tmux] New statusline, because it was time
Mostly just visual, but I embedded the battery I built for my prompt
into it as well. It makes more sense here. Will probably add a few more
widgets over time.

--- a/dotfiles/tmux.conf
+++ b/dotfiles/tmux.conf
@@ -1,67 +1,75 @@
 set-option -g default-shell $SHELL
 set-option -g default-terminal screen-256color
+set-option -g default-command "which reattach-to-user-namespace 2>&1 > /dev/null && reattach-to-user-namespace -l $SHELL || $SHELL"
 
 set-option -g prefix C-q
-set-option -sg escape-time 10
+bind-key C-q send-prefix
+unbind-key C-b
+
+# Disable use of escape bindings, vim hurts otherwise.
+# Alt can be used instead if configured properly in your terminal (+Esc in iTerm).
+set-option -s escape-time 0
 
 set-option -g base-index 1
 
 set-option -g status-interval 1
+set-option -g display-time 0 # Display status output until next keystroke.
 
-set-window-option -g mode-keys vi
+set-option -g mode-keys vi
 set-option -g status-keys vi
 
-set-option -g mouse
-
-set-window-option -g monitor-activity on
-set-window-option -g aggressive-resize on
+set-option -g monitor-activity on
+set-option -g aggressive-resize on
 
 set-option -g clock-mode-style 24
 
 # Messageline
-set-option -g message-bg cyan
-set-option -g message-fg black
+set-option -g message-bg black
+set-option -g message-fg blue
 set-option -g message-attr dim
 
 # Statusline
-set-option -g status-bg black
-set-option -g status-fg default
-set-option -g status-attr dim
+TMUX_DIVIDER="#[fg=default] // "
+TMUX_WINDOW_FORMAT="#{window_index} #{window_name}"
 
-set-option -g status-left '#{session_name} @ #{host_short} >> '
-set-option -g status-left-fg cyan
-set-option -g status-left-attr dim
+set-option -g status-style fg=default,bg=black
+
+set-option -g status-left "#[fg=blue]#{host_short} ➔ #{session_name}$TMUX_DIVIDER"
 set-option -g status-left-length 50
 
 set-option -g status-justify left
 
-set-window-option -g window-status-format '(#{window_index} #{window_name})'
-set-window-option -g window-status-current-format '(#{window_index} #{window_name})'
-set-window-option -g window-status-current-fg yellow
+set-option -g window-status-format "$TMUX_WINDOW_FORMAT"
+set-option -g window-status-current-format "$TMUX_WINDOW_FORMAT"
+set-option -g window-status-separator " / "
 
-set-window-option -g window-status-bell-attr underscore
-set-window-option -g window-status-bell-fg red
+set-option -g window-status-current-fg green
+set-option -g window-status-current-attr bold
 
-set-window-option -g window-status-activity-attr none
-set-window-option -g window-status-activity-fg green
+set-option -g window-status-bell-attr underscore
+set-option -g window-status-bell-fg red
+
+set-option -g window-status-activity-attr none
+set-option -g window-status-activity-fg magenta
+
+set-option -g renumber-windows on
 
 source-file $XDG_CONFIG_HOME/tmux/expanded-status.conf
 source-file $XDG_CONFIG_HOME/tmux/show-clock.conf
 
-# Rebind window management to track working directory.
-bind '"' split-window -c "#{pane_current_path}"
-bind % split-window -h -c "#{pane_current_path}"
+# Rebind window management and track working directory.
+unbind-key %
+unbind-key '"'
+bind \ split-window -c "#{pane_current_path}"
+bind | split-window -h -c "#{pane_current_path}"
 bind c new-window -c "#{pane_current_path}"
 
 bind-key r source-file ~/.tmux.conf
 bind-key a last-window
-bind-key C-a send-prefix
-unbind-key C-b
 bind-key m set-window-option monitor-activity
 bind-key \; command-prompt
 bind-key S choose-session # Bump this to make room for ssh:
 bind-key s command-prompt -p ssh: "new-window -n '^ %1' 'ssh %1'"
-bind-key 0 move-window -r # Renumber windows in order
 bind-key X confirm-before -p "kill-window #{window_name}? (y/n)" kill-window
 bind-key T clock-mode # Bumped to make room for status clock toggle.
 
@@ -89,3 +97,4 @@ unbind-key Left
 unbind-key Right
 unbind-key Up
 unbind-key Down
+
