--- a/dotfiles/tmux/compact-status.conf
+++ b/dotfiles/tmux/compact-status.conf
@@ -1,4 +1,5 @@
 set-option -g status-left-length 0
-set-option -g status-right '#[fg=cyan]%H:%M'
+set-option -g status-right "#[fg=blue]%H:%M"
 
 bind-key / source-file $XDG_CONFIG_HOME/tmux/expanded-status.conf
+
