--- a/dotfiles/tmux/expanded-status.conf
+++ b/dotfiles/tmux/expanded-status.conf
@@ -1,5 +1,8 @@
 set-option -g status-left-length 50
-set-option -g status-right '#[fg=cyan]%H:%M:%S // %Y-%m-%d (%a)'
+set-option -g status-right "$TMUX_DIVIDER#[fg=blue]%H:%M#[fg=default]"
+
+# If we're on OS X, add a battery to the bar.
+if 'which pmset 2>&1 > /dev/null' 'set-option -ga status-right " #(~/System/scripts/tmux-battery.sh)"'
 
 bind-key / source-file $XDG_CONFIG_HOME/tmux/compact-status.conf
 
