[tmux] Remove flaky statusline modes

--- a/dotfiles/tmux.conf
+++ b/dotfiles/tmux.conf
@@ -54,8 +54,11 @@ set-option -g window-status-activity-fg magenta
 
 set-option -g renumber-windows on
 
-source-file $XDG_CONFIG_HOME/tmux/expanded-status.conf
-source-file $XDG_CONFIG_HOME/tmux/show-clock.conf
+set-option -g status-left-length 50
+set-option -g status-right "$TMUX_DIVIDER#[fg=blue]%H:%M#[fg=default]"
+
+# If we're on OS X, add a battery to the bar.
+if 'which pmset 2>&1 > /dev/null' 'set-option -ga status-right " #(~/System/scripts/tmux-battery.sh)"'
 
 # Rebind window management and track working directory.
 unbind-key %
