[tmux] Reenable mouse

--- a/dotfiles/tmux.conf
+++ b/dotfiles/tmux.conf
@@ -17,6 +17,7 @@ set-option -g display-time 0 # Display status output until next keystroke.
 
 set-option -g mode-keys vi
 set-option -g status-keys vi
+set-option -g mouse on
 
 set-option -g monitor-activity on
 set-option -g aggressive-resize on
