--- a/dotfiles/tmux.conf
+++ b/dotfiles/tmux.conf
@@ -55,10 +55,14 @@ set-option -g window-status-activity-fg magenta
 
 set-option -g renumber-windows on
 
-set-option -g status-left-length 50
-set-option -g status-right "$TMUX_DIVIDER#[fg=blue]%H:%M#[fg=default]"
+set-option -g status-right-length 128
+set-option -g status-right "#{TMUX_DIVIDER}#{?client_prefix,#[fg=red]tmux-mode,term-mode}#[fg=default] / #(echo \"\$TMUX_MPV_STATUS\")#[fg=blue]%H:%M#[fg=default]"
 
-# If we're on OS X, add a battery to the bar.
+set-option -g pane-border-status top
+set-option -g pane-border-format "#{?pane_active,#[reverse],}#{?client_prefix,#[fg=red],} #{pane_current_command} #[default]"
+set-option -g pane-active-border-style "#{?client_prefix,#[fg=red],}"
+
+# If we're on macOS, add a battery to the bar.
 if 'which pmset 2>&1 > /dev/null' 'set-option -ga status-right " #(~/System/scripts/tmux-battery.sh)"'
 
 # Rebind window management and track working directory.
