--- a/dotfiles/tmux.conf
+++ b/dotfiles/tmux.conf
@@ -35,7 +35,7 @@ TMUX_WINDOW_FORMAT="#{window_index} #{window_name}"
 
 set-option -g status-style fg=default,bg=black
 
-set-option -g status-left "#[fg=blue]#{host_short} ➔ #{session_name}$TMUX_DIVIDER"
+set-option -g status-left "#[fg=blue]#{host_short} → #{session_name}$TMUX_DIVIDER"
 set-option -g status-left-length 50
 
 set-option -g status-justify left
