--- a/dotfiles/tmux.conf
+++ b/dotfiles/tmux.conf
@@ -1,6 +1,6 @@
 set-option -g default-shell $SHELL
 set-option -g default-terminal screen-256color
-set-option -g default-command "which reattach-to-user-namespace 2>&1 > /dev/null && reattach-to-user-namespace -l $SHELL || $SHELL"
+#set-option -g default-command "reattach-to-user-namespace -l $SHELL"
 
 set-option -g prefix C-q
 bind-key C-q send-prefix
