--- a/dotfiles/mako/config
+++ b/dotfiles/mako/config
@@ -8,15 +8,12 @@ default-timeout=5000
 max-visible=9
 format=<span font='7'>%a</span>\n<b>%s</b>\n%b
 layer=overlay
+group-by=summary
 
 [hidden]
 background-color=#bfbfbfff
 format=+ %h
 font=Noto Sans Bold 8
-
-[!expiring]
-background-color=#555555ff
-text-color=#eeeeeeff
 
 [app-name=hud]
 # Used by keybindings to show adjusted value.
@@ -26,6 +23,7 @@ format=<b>%s</b>
 background-color=#555555ff
 text-color=#eeeeeeff
 default-timeout=1000
+group-by=none
 
 [app-name=test]
 width=500
@@ -35,6 +33,35 @@ margin=20
 [app-name=coredump-notify]
 background-color=#d09a9a
 
+[app-name=stdnotify urgency=high]
+background-color=#d09a9a
+
 [urgency=high]
 ignore-timeout=true
 default-timeout=0
+
+[!expiring]
+background-color=#555555ff
+text-color=#eeeeeeff
+
+[grouped]
+format=<span font='7'>%a</span>\n(%g) <b>%s</b>\n%b
+
+[group-index=0]
+margin=10,0,0,0
+
+[group-index=1]
+invisible=false
+format=
+width=280
+margin=0
+padding=4
+background-color=#a1b6c7ff
+
+[group-index=2]
+invisible=false
+format=
+width=260
+margin=0
+padding=4
+background-color=#91a6b7ff
