[sway+scripts] fzf-based launcher
Runs a matched .desktop file with gtk-launch (because incredibly,
https://bugs.launchpad.net/ubuntu/+source/glib2.0/+bug/378783 is still
open in 2019), or if nothing matched the input, treat it as a shell
command.

--- a/dotfiles/sway/config
+++ b/dotfiles/sway/config
@@ -9,8 +9,14 @@ set $up k
 set $right l
 # Your preferred terminal emulator
 set $term termite
-# Your preferred application launcher
-set $menu rofi -show drun
+
+#set $menu rofi -show drun
+set $menu termite -t termite-fzf -e fzf-launcher
+for_window [title=termite-fzf] {
+    floating enable
+    resize set width 800 px height 200 px
+    move position center
+}
 
 ### Output configuration
 
