[mpv] Set preferred subtile order and font

--- a/dotfiles/mpv/mpv.conf
+++ b/dotfiles/mpv/mpv.conf
@@ -2,5 +2,7 @@ gpu-context=wayland
 no-audio-display
 reset-on-next-file=pause
 cache-default=1024
-slang=en
+alang=Japanese,jpn,ja,English,eng,en
+slang=English,eng,en
+sub-ass-override=yes
 script=/usr/lib/mpv/mpris.so
