[mpv] Enable ipc socket
I wish environment variables worked in here…

--- a/dotfiles/mpv/mpv.conf
+++ b/dotfiles/mpv/mpv.conf
@@ -6,3 +6,4 @@ alang=Japanese,jpn,ja,English,eng,en
 slang=English,eng,en
 sub-ass-override=yes
 script=/usr/lib/mpv/mpris.so
+input-ipc-server=~/.cache/mpv-socket
